add nodegroup MODEL and error handler
1) add nodegroup MODEL and update node-service
2) add getAllNodegroups
3) add error handler for controllers
4) update DELETE APIs to first find then destroy
