# lib/api/controllers/nodegroups.js
@@ -1,12 +1,17 @@
 'use strict';
 
 var controller = require('../helper').swaggerController,
+    Error = require('../errors.js'),
     nodeService = require('../services/node-service');
+
+var getAllNodegroups = controller(function() {
+    return nodeService.getAllNodegroups();
+});
 
 var postNodegroup = controller(function(req) {
     var count = req.swagger.params.count.value;
     if(count <= 0 || count > 2000) {
-        throw new Error('Number between 1 and 2000 is accepted for parameter count.');
+        throw new Error.BadRequestError('Parameter count should be between 1 and 2000.');
     }
     return nodeService.postNodegroup(count);
 });
@@ -30,6 +35,7 @@ var getNodegroupById = controller(function(req) {
 });
 
 module.exports = {
+    getAllNodegroups: getAllNodegroups,
     postNodegroup: postNodegroup,
     postTaskByNodegroupId: postTaskByNodegroupId,
     deleteNodegroupById: deleteNodegroupById,
