# lib/api/models/nodegroup.js
@@ -3,8 +3,8 @@
 var Waterline = require('waterline'),
     uuid = require('node-uuid');
 
-var nodeCollection = Waterline.Collection.extend({
-    identity: 'nodes',
+var nodegroupCollection = Waterline.Collection.extend({
+    identity: 'nodegroups',
     connection: 'mongo',
     migrate: 'safe',
     attributes: {
@@ -16,14 +16,13 @@ var nodeCollection = Waterline.Collection.extend({
                 return uuid.v4();
             }
         },
-        ip: 'string',
-        mac: 'string',
-        nodegroup: {
-            model: 'nodegroups'
+        nodes: {
+            collection: 'nodes',
+            via: 'nodegroup'
         },
         toJSON: function() {
             var obj = this.toObject();
-            obj.nodeId = obj.id;
+            obj.nodegroupId = obj.id;
             delete obj.id;
             delete obj.createdAt;
             delete obj.updatedAt;
@@ -32,4 +31,4 @@ var nodeCollection = Waterline.Collection.extend({
     }
 });
 
-module.exports = nodeCollection;
+module.exports = nodegroupCollection;
