# lib/api/services/node-service.js
@@ -2,6 +2,7 @@
 
 var waterlineService = require('./waterline-service'),
     Promise = require('bluebird'),
+    Error = require('../errors.js'),
     _ = require('lodash'),
     uuid = require('node-uuid'),
     taskQueue = require('../../task-queue'),
@@ -15,11 +16,17 @@ NodeService.prototype.getAllNodes = function() {
     return waterlineService.nodes.find();
 };
 
+NodeService.prototype.getAllNodegroups = function() {
+    return waterlineService.nodegroups.find().populate('nodes');
+};
+
 NodeService.prototype.postNodegroup = function(count) {
+    var nodegroupId;
     return Promise.try(function() {
-        return uuid.v4();
+        return waterlineService.nodegroups.create();
     })
-    .then(function(nodegroupId) {
+    .then(function(nodegroup) {
+        nodegroupId = nodegroup.id;
         return Promise.map(_.range(count), function() {
             return Promise.all([
                 resourcePool.nextIp(),
@@ -29,13 +36,16 @@ NodeService.prototype.postNodegroup = function(count) {
                 return {
                     ip: ip,
                     mac: mac,
-                    nodegroupId: nodegroupId
+                    nodegroup: nodegroupId
                 };
             });
         });
     })
     .then(function(nodes) {
         return waterlineService.nodes.create(nodes);
+    })
+    .then(function() {
+        return waterlineService.nodegroups.find({'id': nodegroupId}).populate('nodes');
     });
 };
 
@@ -44,13 +54,15 @@ NodeService.prototype.postTaskByNodegroupId = function(nodegroupId, taskName, st
     delay = delay || 0;
     var taskId = uuid.v4();
     return Promise.all([
-        waterlineService.nodes.find({'nodegroupId': nodegroupId}),
+        waterlineService.nodes.find({'nodegroup': nodegroupId}),
         taskManager.getJobsByName(taskName)
     ])
     .spread(function(nodes, jobs) {
-        if(_.isEmpty(nodes) || _.isUndefined(jobs)) {
-            //TODO
-            throw new Error("404");
+        if(_.isEmpty(nodes)) {
+            throw new Error.NotFoundError("Can't find nodes under Node Group " + nodegroupId + ".");
+        }
+        if(_.isUndefined(jobs)) {
+            throw new Error.NotFoundError("Can't find Task " + taskName + ".");
         }
         var nodeDelay = startDelay;
         _.forEach(nodes, function(n) {
@@ -73,15 +85,36 @@ NodeService.prototype.postTaskByNodegroupId = function(nodegroupId, taskName, st
 };
 
 NodeService.prototype.deleteNodegroupById = function(nodegroupId) {
-    return waterlineService.nodes.destroy({'nodegroupId': nodegroupId});
+    return waterlineService.nodegroups.find({'id': nodegroupId}).populate('nodes')
+    .then(function(nodegroup) {
+        if(_.isEmpty(nodegroup)) {
+            throw new Error.NotFoundError("Can't find Node Group" + nodegroupId + ".");
+        }
+        return waterlineService.nodegroups.destroy({'id': nodegroupId})
+        .then(function() {
+            return waterlineService.nodes.destroy({'nodegroup': nodegroupId});
+        })
+        .then(function() {
+            return nodegroup;
+        });
+    });
 };
 
 NodeService.prototype.getNodegroupById = function(nodegroupId) {
-    return waterlineService.nodes.find({'nodegroupId': nodegroupId});
+    return waterlineService.nodegroups.find({'id': nodegroupId}).populate('nodes');
 };
 
 NodeService.prototype.deleteNodeById = function(nodeId) {
-    return waterlineService.nodes.destroy({'id': nodeId});
+    return waterlineService.nodes.find({'id': nodeId})
+    .then(function(node) {
+        if(_.isEmpty(node)) {
+            throw new Error.NotFoundError("Can't find Node " + nodeId + ".");
+        }
+        return waterlineService.nodes.destroy({'id': nodeId})
+        .then(function() {
+            return node;
+        });
+    });
 };
 
 module.exports = new NodeService();
